go/auto/test/errors/compilation_error/typescript/index.ts
import * as khulnasoft from "@khulnasoft/khulnasoft";

will not compile
